--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -3,4 +3,5 @@
   <package id="Aspose.Words" version="25.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.7.25104.5739" targetFramework="net472" />
 </packages>
