Рабочая версия до добавления сущности Cabinet

--- a/WpfApp1/Hospital.csproj
+++ b/WpfApp1/Hospital.csproj
@@ -274,6 +274,12 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Resource Include="Resources\справка.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\талон.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Шаблон Согласие на обработку ПД.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
