--- a/WpfApp1/Hospital.csproj
+++ b/WpfApp1/Hospital.csproj
@@ -143,7 +143,7 @@
     <Compile Include="EditDoctor.xaml.cs">
       <DependentUpon>EditDoctor.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EventHandler.cs" />
+    <Compile Include="IEventHandler.cs" />
     <Compile Include="healingevent.cs">
       <DependentUpon>Base.tt</DependentUpon>
     </Compile>
@@ -273,6 +273,7 @@
     <None Include="Base.edmx.diagram">
       <DependentUpon>Base.edmx</DependentUpon>
     </None>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
