Сохранение до установщика

--- a/WpfApp1/Hospital.csproj
+++ b/WpfApp1/Hospital.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Aspose.Words, Version=25.4.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
       <HintPath>..\packages\Aspose.Words.25.4.0\lib\net462\Aspose.Words.dll</HintPath>
@@ -367,6 +370,7 @@
       <DependentUpon>Base.edmx</DependentUpon>
       <LastGenOutput>Base.cs</LastGenOutput>
     </Content>
+    <Resource Include="icon.ico" />
     <Resource Include="Resources\вопросик.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
